Berth and Class input radio buttons alignment issue fixed

--- a/WebContent/css/dataentry_form.css
+++ b/WebContent/css/dataentry_form.css
@@ -19,6 +19,17 @@
   padding: 10px;
   font-size: 16px;
 }
+
+#berth-input, class-input{
+	position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+
 .form-signin .form-control:focus {
   z-index: 2;
 }
